# template_python

./: LICENSE  MANIFEST.in  pyproject.toml  setup.py
template_python/: __init__.py  main.py
